Document Ralsei's scarves

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -511,7 +511,291 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-{% comment %} TODO: Ralsei's scarves {% endcomment %}
+<section class="d-section" id="scarves">
+	<h2>Ralsei's scarves</h2>
+
+	<h3>Red Scarf</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A basic scarf made of lightly<br>magical fiber.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>No. Just... no.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Comfy! Touch it, Kris!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Huh? No, I'm not cold.</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Ragger</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A rugged scarf that cuts enemies like a dagger.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Ow! That can't be comfy!</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Feels prickly... Nice!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Ouch! ... kind of nice</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Dainty Scarf</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>Delicate scarf that increases healing<br>power but has no attack.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>IT'S MADE OF DOILIES!</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>I'll protect everyone!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>S-stop covering me with it!</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Cheer Scarf</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A scarf with colorful you-can-do-it<br>imagery. Gains more TP from criticals.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Smiley faces? Ecch.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>You can do it!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Now THIS is a tacky scarf! Faha!</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Fiber Scarf</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A scarf made of soft microfiber.</d-text>
+		<d-text>Balances attack and magic.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>(Soft...)</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Oh! My fur's staticy!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Sure, I'll... huh? It's a weapon?</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Ragger 2</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A sharp and scratchy scarf.</d-text>
+		<d-text>Worse healing, better attack.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>This is Ralsei's deal.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>I'm a prickly prince!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>(It's like Santa's beard?)</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Puppet Scarf</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A scarf made of strange strings.</d-text>
+		<d-text>For those that abandon healing.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>No way, that's creepy.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>If I have to fight...</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>(Feels like guitar strings...)</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Flex Scarf</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A scarf that is warm and fuzzy, but with<br>a metal core that lets it keep its shape.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Looks like a giant caterpillar.  </d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>So pliable, like me!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Twist it and... it's a wreath!</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Scarf Mark</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A thin scarf with a deep sheen. Holy writing has been pressed into it, imbuing it with magic.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Heheh...</d-text>
+	</d-box>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Don't write that on it!!</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>I'll keep my place.</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Look, ribbon dancing!</d-text>
+	</d-box>
+</section>
 
 {% comment %} TODO: Noelle's rings {% endcomment %}
 
