Document Noelle's rings

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -797,7 +797,97 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-{% comment %} TODO: Noelle's rings {% endcomment %}
+<section class="d-section" id="rings">
+	<h2>Noelle's rings</h2>
+
+	<h3>Snow Ring</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A ring with the emblem of the<br>snowflake</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Smells like Noelle</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Are you... proposing?</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>(Thank goodness...)</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Thorn Ring</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>Wearer takes damage from pain</d-text>
+		<d-text>Reduces the TP cost of ice spells</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>A torture device?</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>...</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<p class="note">Noelle is silent.</p>
+
+
+	<hr>
+
+
+	<h3>Freeze Ring</h3>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A ring with a snowglobe on it.</d-text>
+		<d-text>... is that someone inside?</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Heh, you steal this? Heh.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>It's beautiful...</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>...</d-text>
+	</d-box>
+</section>
 
 {% comment %} TODO: Other weapons {% endcomment %}
 
