Document other weapons

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -889,6 +889,133 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 </section>
 
-{% comment %} TODO: Other weapons {% endcomment %}
+<section class="d-section" id="other">
+	<h2>Other weapons</h2>
+	<p>Equippable by multiple or no party members.</p>
+
+	<h3>Everybody Weapon</h3>
+	<p>Equippable by Kris, Susie, Ralsei, and Noelle.</p>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>It felt right for everyone.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Uhhh... Ok.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>A perfect fit!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>Wh... what is this?</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Broken Sword</h3>
+	<p>Equippable by no one.</p>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A rejected sword cut into 2 pieces.</d-text>
+		<d-text>Not even you can equip this...</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>... this is trash.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Should we fix this...?</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>(Wh... why give this to me?)</d-text>
+	</d-box>
+
+
+	<hr>
+
+
+	<h3>Black Shard</h3>
+	<p>Equippable by Kris and Noelle.</p>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A dagger-like shard of the Black Knife.</d-text>
+		<d-text>Strikes the weakness of dark-element enemies.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>... how is this a weapon?</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>I... shouldn't use it.</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<p class="note">Noelle is silent.</p>
+
+
+	<hr>
+
+
+	<h3>Jingle Blade</h3>
+	<p>Equippable by Kris and Noelle.</p>
+
+	<h4>Description</h4>
+	<d-box theme="equipmenu">
+		<d-text>A lance-like sword with red-and-white stripes.</d-text>
+		<d-text>Perfect for jousting.</d-text>
+	</d-box>
+
+	<h4>Reactions</h4>
+
+	<h5>Susie</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Susie</d-speaker>
+		<d-text>Sleigh the bad guys.</d-text>
+	</d-box>
+
+	<h5>Ralsei</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Ralsei</d-speaker>
+		<d-text>Mmm! Minty and festive!</d-text>
+	</d-box>
+
+	<h5>Noelle</h5>
+	<d-box theme="equipreact">
+		<d-speaker>Noelle</d-speaker>
+		<d-text>What is this, a barber pole?</d-text>
+	</d-box>
+</section>
 
 {% comment %} TODO: Armors {% endcomment %}
