Equipment: add note about chara specificity, replace <br> with custom span.break

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -32,6 +32,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 <section class="d-section" id="swords">
 	<h2>Kris's swords</h2>
+	<p>None of the swords listed below can be equipped by anyone but Kris. See <a href="#other">Other weapons</a> for swords that can be equipped by others.</p>
 
 	<h3>Wood Blade</h3>
 
@@ -203,7 +204,8 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>The blade extends when you press the hilt. CHA-CHK!</d-text>
+		<d-text>The blade extends when you press the hilt.</d-text>
+		<d-text>CHA-CHK!</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -293,12 +295,13 @@ wwho is who you're trying to equip the weapon/armor to
 
 <section class="d-section" id="axes">
 	<h2>Susie's axes</h2>
+	<p>None of the axes listed below can be equipped by anyone but Susie.</p>
 
 	<h3>Mane Ax</h3>
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Beginner's ax forged from the<br>mane of a dragon whelp.</d-text>
+		<d-text>Beginner's ax forged from the<span class="break"></span> mane of a dragon whelp.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -393,7 +396,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Make sure to charge it by<br>plugging it into the wall.</d-text>
+		<d-text>Make sure to charge it by<span class="break"></span> plugging it into the wall.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -424,7 +427,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>An axe used to clear wastelands<br>in a fetid swamp. Not poison, but gross.</d-text>
+		<d-text>An axe used to clear wastelands<span class="break"></span> in a fetid swamp. Not poison, but gross.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -513,12 +516,13 @@ wwho is who you're trying to equip the weapon/armor to
 
 <section class="d-section" id="scarves">
 	<h2>Ralsei's scarves</h2>
+	<p>None of the scarves listed below can be equipped by anyone but Ralsei.</p>
 
 	<h3>Red Scarf</h3>
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A basic scarf made of lightly<br>magical fiber.</d-text>
+		<d-text>A basic scarf made of lightly<span class="break"></span> magical fiber.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -580,7 +584,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Delicate scarf that increases healing<br>power but has no attack.</d-text>
+		<d-text>Delicate scarf that increases healing<span class="break"></span> power but has no attack.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -611,7 +615,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A scarf with colorful you-can-do-it<br>imagery. Gains more TP from criticals.</d-text>
+		<d-text>A scarf with colorful you-can-do-it<span class="break"></span> imagery. Gains more TP from criticals.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -738,7 +742,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A scarf that is warm and fuzzy, but with<br>a metal core that lets it keep its shape.</d-text>
+		<d-text>A scarf that is warm and fuzzy, but with<span class="break"></span> a metal core that lets it keep its shape.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -799,12 +803,13 @@ wwho is who you're trying to equip the weapon/armor to
 
 <section class="d-section" id="rings">
 	<h2>Noelle's rings</h2>
+	<p>None of the rings listed below can be equipped by anyone but Noelle.</p>
 
 	<h3>Snow Ring</h3>
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A ring with the emblem of the<br>snowflake</d-text>
+		<d-text>A ring with the emblem of the<span class="break"></span> snowflake</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1020,6 +1025,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 <section class="d-section" id="armor">
 	<h2>Armor</h2>
+	<p>Armor can normally be equipped by all party members, unless specified otherwise.</p>
 
 	<h3>Attempting to remove armor</h3>
 	<p>Most characters allow you to remove their equipment (leaving that armor slot blank, instead of replacing it with another armor) without saying anything. The exception is Susie, who reacts as follows:</p>
@@ -1033,7 +1039,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A thin square charm that sticks<br>to you, increasing defense.</d-text>
+		<d-text>A thin square charm that sticks<span class="break"></span> to you, increasing defense.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1064,7 +1070,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A bracelet made out of various<br>symbol-inscribed cubes.</d-text>
+		<d-text>A bracelet made out of various<span class="break"></span> symbol-inscribed cubes.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1096,12 +1102,12 @@ wwho is who you're trying to equip the weapon/armor to
 	<h4>Description</h4>
 	<h5>Outside of Chapter 3</h5>
 	<d-box theme="equipmenu">
-		<d-text>A cute hair ribbon that increases<br>the range bullets increase tension.</d-text>
+		<d-text>A cute hair ribbon that increases<span class="break"></span> the range bullets increase tension.</d-text>
 	</d-box>
 
 	<h5>During Chapter 3</h5>
 	<d-box theme="equipmenu">
-		<d-text>A cute hair ribbon. Increases the range<br>at which bullets raise tension.</d-text>
+		<d-text>A cute hair ribbon. Increases the range<span class="break"></span> at which bullets raise tension.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1148,7 +1154,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A crinkly hair ribbon that slightly<br>increases your defense.</d-text>
+		<d-text>A crinkly hair ribbon that slightly<span class="break"></span> increases your defense.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1195,7 +1201,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Shackle that ironically increases<br>your attack and defense.</d-text>
+		<d-text>Shackle that ironically increases<span class="break"></span> your attack and defense.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1233,7 +1239,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h5>During Chapter 3</h5>
 	<d-box theme="equipmenu">
-		<d-text>A golden coin with a once-powerful mouse<br>wizard engraved on it.</d-text>
+		<d-text>A golden coin with a once-powerful mouse<span class="break"></span> wizard engraved on it.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1295,7 +1301,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A square charm that increases<br>dropped money by 5%</d-text>
+		<d-text>A square charm that increases<span class="break"></span> dropped money by 5%</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1326,7 +1332,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Two ribbons. You'll have to put<br>your hair into pigtails.</d-text>
+		<d-text>Two ribbons. You'll have to put<span class="break"></span> your hair into pigtails.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1359,7 +1365,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A tough bracelet made of green wires,<br>and studded with sharp glowing lights.</d-text>
+		<d-text>A tough bracelet made of green wires,<span class="break"></span> and studded with sharp glowing lights.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1390,7 +1396,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Chain-armor. Send it to 10 others<br>or it'll lose its defensive rating</d-text>
+		<d-text>Chain-armor. Send it to 10 others<span class="break"></span> or it'll lose its defensive rating</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1421,7 +1427,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A handsome bowtie. Looks like the brand<br>name has been cut off.</d-text>
+		<d-text>A handsome bowtie. Looks like the brand<span class="break"></span> name has been cut off.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1484,7 +1490,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Grazing bullets affects<br>the turn length by 10% more</d-text>
+		<d-text>Grazing bullets affects<span class="break"></span> the turn length by 10% more</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1515,7 +1521,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Gain 10% more tension from<br>grazing bullets</d-text>
+		<d-text>Gain 10% more tension from<span class="break"></span> grazing bullets</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1530,7 +1536,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>It's a mannequin with the clothes<br>permanently attached. Useless</d-text>
+		<d-text>It's a mannequin with the clothes<span class="break"></span> permanently attached. Useless</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1639,7 +1645,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>An old bowtie. It seems to have<br>lost much of its defensive value.</d-text>
+		<d-text>An old bowtie. It seems to have<span class="break"></span> lost much of its defensive value.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -1798,7 +1804,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<p>An alternate description and reactions. The flag that's supposed to trigger these never actually gets set. Maybe it was supposed to represent which save slot (1/2/3) you were using, like <a href="{{ '/misc/items#tvdinner' | relative_url }}">some item descriptions</a> do...?</p>
 
 	<d-box theme="equipmenu">
-		<d-text>A lodestone token inscribed with the record of<br>a legend athlete. Enemy bullets give a bit more TP.</d-text>
+		<d-text>A lodestone token inscribed with the record of<span class="break"></span> a legend athlete. Enemy bullets give a bit more TP.</d-text>
 	</d-box>
 	<d-box theme="equipreact">
 		<d-speaker>Susie</d-speaker>
@@ -1871,7 +1877,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A blue cheer bow. When the user uses a<br>healing move, it recovers slightly more HP.</d-text>
+		<d-text>A blue cheer bow. When the user uses a<span class="break"></span> healing move, it recovers slightly more HP.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -2111,7 +2117,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>Elegant lace ribbon with gloves,<br>delicate enough to see through. +4 DEF +2 ATK</d-text>
+		<d-text>Elegant lace ribbon with gloves,<span class="break"></span> delicate enough to see through. +4 DEF +2 ATK</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
@@ -2144,7 +2150,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 	<h4>Description</h4>
 	<d-box theme="equipmenu">
-		<d-text>A spider made of gold. It gathers coins<br>into it, reducing $ gained.</d-text>
+		<d-text>A spider made of gold. It gathers coins<span class="break"></span> into it, reducing $ gained.</d-text>
 	</d-box>
 
 	<h4>Reactions</h4>
