POWER: Correct dog %s from Ch2 onwards

--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -5,6 +5,7 @@ In ch2, level is 2 at start; changes to 3 after fountain is sealed. this number 
 sources: gml_Object_obj_darkcontroller_Draw_0 for each chapter
 
 gotta add each character's SPELLS section also... pull names/costs from gml_GlobalScript_scr_spellinfo
+or do we want to save that for a separate page...?
 
 <section class="d-section" id="kris">
 	<h2>Kris</h2>
@@ -42,7 +43,7 @@ gotta add each character's SPELLS section also... pull names/costs from gml_Glob
 	<p class="note">made any progress on weird route, even just killing the first virovirokun</p>
 	<p>LV~1 Leader#Commands.</p>
 
-	<p>97% chance of ???; 3% chance of "Dog: [spr_dog_sleep]"</p>
+	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
 	<p>???</p>
 	<p>Guts: 2</p>
 
@@ -71,7 +72,7 @@ gotta add each character's SPELLS section also... pull names/costs from gml_Glob
 	<p class="note">if has ch3 egg</p>
 	<p>LV3 Enjoying#the youthful#days.</p>
 
-	<p>97% chance of ???; 3% chance of "Dog: [spr_dog_sleep]"</p>
+	<p>96% chance of ???; 4% chance of "Dog: [spr_dog_sleep]"</p>
 	<p>If made any kills on sword route, *: Sword route kill count, clamped to 0 and 9999; otherwise ???</p>
 	<p>Guts: 2</p>
 
@@ -89,7 +90,7 @@ gotta add each character's SPELLS section also... pull names/costs from gml_Glob
 	<p>LV4 Dark Bead#Broken off,#but still locked.</p>
 
 	<p>???</p>
-	<p>3% chance of "Dog: [spr_dog_sleeping]"; otherwise, Slain: # or Purify: # if you've encountered the titan spawn; otherwise ???</p>
+	<p>4% chance of "Dog: [spr_dog_sleeping]"; otherwise, Slain: # or Purify: # if you've encountered the titan spawn; otherwise ???</p>
 	<p>Guts: 3</p>
 </section>
 
